<resources>
        <string name="sans_serif" translatable="false" >sans-serif</string>
    <string name="app_name">海龟出行</string>
    <string name="home">首页</string>
    <string name="destination">目的地</string>
    <string name="consult">咨询</string>
    <string name="journey">行程</string>
    <string name="my">我的</string>
    <string name="PersonPhone">手机号</string>
    <string name="PersonName">姓名</string>
    <string name="PersonSex">性别</string>
    <string name="PersonPhoto">头像</string>
    <string name="PersonPassword">密码设置</string>
    <string name="password">密码</string>
    <string name="passwordMessage1">输入至少6位密码</string>
    <string name="confirmpassword">确定密码</string>
    <string name="passwordMessage2">重新输入密码</string>
    <string name="commit">提交</string>
    <string name="PhoneNumber">手机号</string>
    <string name="AuthCode">验证码</string>
    <string name="GetAuthCode">获取验证码</string>
    <string name="inputpassword">输入密码</string>
    <string name="inputphone">输入手机号</string>
    <string name="inputauthcode">输入验证码</string>
    <string name="settingpassword">设置密码(6-16数字、字母)</string>
    <string name="resumeload">重新输入</string>
    <string name="invitefriends">邀请好友</string>
    <string name="getcoupon">领取优惠券</string>
    <string name="seachdestination">搜索目的地</string>
    <string name="cancel">取消</string>
    <string name="seachhistory">搜索历史</string>
    <string name="clear">清除</string>
    <string name="citycustombus">市内包车游</string>
    <string name="crosscitycustombus">跨城定制游</string>
    <string name="showcardmessage">举牌信息</string>
    <string name="sure">确定</string>
    <string name="payfail">支付失败</string>
    <string name="ordercancel">订单取消</string>
    <string name="orderpaycancel">订单支付取消</string>
    <string name="searchresult">搜索结果</string>
    <string name="searchresultmessage">与“result”相关商品125件</string>
    <string name="mycollect">我的收藏</string>
    <string name="discountcoupon">优惠券</string>
    <string name="billquestion">发票问题</string>
    <string name="comenquestion">常见问题</string>
    <string name="sharegift">分享有礼</string>
    <string name="userporocpol">用户协议</string>
    <string name="ideoback">意见反馈</string>
    <string name="contactservice">联系客服</string>
    <string name="sos">紧急电话</string>
    <string name="dingtrip">接机信息</string>
    <string name="HotDestinations">热门目的地</string>
    <string name="HotRoute">热门路线</string>
    <string name="DriverStory">司导故事</string>
    <string name="UserVoice">客户心声</string>
    <string name="SearchDestination">搜索目的地</string>
    <string name="charteredBus">定制包车游</string>
    <string name="ExclusiveDriver">专属司导灵活行</string>
    <string name="AirportTransportation">接送机</string>
    <string name="ChinaCharteredBus">中文包车接送机</string>
    <string name="SpecialistCar">专车接送</string>
    <string name="Carpooling">结伴拼车</string>
    <string name="PreferentialDusyFun">优惠热闹更好玩</string>
    <string name="name">李小娜</string>
    <string name="voice">有时我们选择改变，并非经过深思熟虑，而更像是听见天地间冥冥中的呼唤。呼唤你前往...</string>
    <string name="attractions">上野公园</string>
    <string name="buy">255人购买</string>
    <string name="OriginalPrice">原价:￥998</string>
    <string name="PresentPrice">￥1200/车</string>
    <string name="city">大阪</string>
    <string name="story">爱玩儿，会玩儿，爱旅行，会摄影工作的同时。</string>
    <string name="hot">热门</string>
    <string name="HongKongMacauTaiwan">港澳台</string>
    <string name="SoutheastAsia">东南亚</string>
    <string name="DayKorea">日韩</string>
    <string name="European">欧洲</string>
    <string name="NorthAmerica">北美洲</string>
    <string name="SouthAmerica">南美洲</string>
    <string name="Oceania">大洋洲</string>
    <string name="Africa">非洲</string>
    <string name="exitlogin">退出登录</string>
    <string name="personmessage">个人信息</string>
    <string name="ideobackmessage">你的意见与反馈是我们前进的动力</string>
    <string name="ChooseInvoice">选择</string>
    <string name="InvoiceService">发票服务</string>
    <string name="ServiceType">选择发票类型</string>
    <string name="ElectronicInvoice">电子发票</string>
    <string name="PaperInvoice">纸质发票</string>
    <string name="InvoiceDetails">发票详情</string>
    <string name="company">公司抬头</string>
    <string name="InvoiceContent">发票内容</string>
    <string name="money">￥1236</string>
    <string name="MoreInformation">更多信息</string>
    <string name="information">填写购买方、备注、收款人等</string>
    <string name="ConsigneeInformation">收件信息</string>
    <string name="consignee">收件人</string>
    <string name="ContactPhone">联系电话</string>
    <string name="phone">13719466868</string>
    <string name="place">所在地区</string>
    <string name="DetailedSite">详细地址</string>
    <string name="TaxPoint">开发票需加收7%的税点</string>
    <string name="ModePayment">支付方式</string>
    <string name="TypePayment">微信</string>
    <string name="payment">微信支付168.35元</string>
    <string name="ChangePassword">修改密码</string>
    <string name="ClearCache">清除缓存</string>
    <string name="AboutUs">关于我们</string>
    <string name="version">V1.0</string>
    <string name="PassengerServiceCharge">客运服务费</string>
    <string name="ElectronicEmail">电子邮件</string>
    <string name="email">输入您的电子邮件</string>
    <string name="descr">备注说明</string>
    <string name="InputDescr">输入备注说明</string>
    <string name="TaxpayerIdentificationNumber">纳税人识别号</string>
    <string name="InputTaxpayerIdentificationNumber">输入纳税人识别号</string>
    <string name="AddressPhone">地址、电话</string>
    <string name="InputAddressPhone">输入注册地址、电话</string>
    <string name="BankAccount">开户行及账号</string>
    <string name="InputBankAccount">输入开户行及账号</string>
    <string name="pickupairport">接送机</string>
    <string name="txaireport">接机</string>
    <string name="songji">送机</string>
    <string name="ExoticData">环球数据：26565体验过</string>
    <string name="DepartureCity">出发城市</string>
    <string name="WantToGoToWhere">想去哪里</string>
    <string name="CharterDate">包车日期</string>
    <string name="ChooseCharterDate">选择包车起止日期</string>
    <string name="travelPeoplePum">出行人数</string>
    <string name="SelectPeoplePum">选择人数</string>
    <string name="SelectModels">选择车型</string>
    <string name="CustomTravelGuide">定制包车旅游指南</string>
    <string name="TripReservation">行程预定</string>
    <string name="InputFlightno">输入航班号</string>
    <string name="GoTo">您要去哪儿</string>
    <string name="TripDelayCost">行程延误免费等</string>
    <string name="area">地区</string>
    <string name="day">天数</string>
    <string name="theme">主题</string>
    <string name="GroupErrands">结伴出行</string>
    <string name="StartingPlace">起始地点</string>
    <string name="after">经过地点</string>
    <string name="InputViaPoint">输入途经点</string>
    <string name="InputTerminal">输入终点</string>
    <string name="OrderDetails">订单详情</string>
    <string name="TravelInformation">行程信息</string>
    <string name="cost">费用</string>
    <string name="SelectPaymentMethod">请选择支付方式</string>
    <string name="pay">支付</string>
    <string name="CharterCost">包车费用</string>
    <string name="coupons">优惠卷</string>
    <string name="total">总计</string>
    <string name="Total">合计：</string>
    <string name="jieji">接机</string>
    <string name="yizhifu">已支付</string>
    <string name="myjoureny">我的行程</string>
    <string name="PaySuccess">支付成功</string>
    <string name="ViewOrderDetails">查看订单详情</string>
    <string name="DetailedPlanning">为了更精确的规划旅游路线，您可以根据您自身的需求，详细规划行程！</string>
    <string name="complete">完成</string>
    <string name="planTrip">规划行程</string>
    <string name="addTrip">添加起始点</string>
    <string name="TripStartingPoint1">第一天行程起始点</string>
    <string name="TripStartingPoint2">第二天行程起始点</string>
    <string name="EnterStartingPoint">输入出发地点</string>
    <string name="ChooseTimeDeparture">选择出发时间</string>
    <string name="SelectEnd">选择当天的终点（输入当天入住的酒店）</string>
    <string name="ContinueAddNextDay">继续添加下一天</string>
    <string name="SceneryCity">景点城市</string>
    <string name="ClickGoToDestination">点击景区即选中您要去的目的地</string>
    <string name="WeChatPay">微信支付</string>
    <string name="PayTreasure">支付宝支付</string>
    <string name="PickUpInformation">接机信息</string>
    <string name="MakeAnAppointment">预约</string>
    <string name="ChooseCarCity">选择用车城市</string>
    <string name="StartGoTO">您从哪里出发</string>
    <string name="RewardRules">奖励规则</string>
    <string name="YourPhoneNumber">输入您的手机号</string>
    <string name="SingleBack">退单</string>
    <string name="delete">删除</string>
    <string name="share">分享</string>
    <string name="review">点评</string>
    <string name="MakeAnAppointmentAgain">再次预约</string>
    <string name="choosecounter">请选择出行人数</string>
    <string name="journeycounter">出行人数</string>
    <string name="ertongzuoyi">儿童座椅</string>
    <string name="Phone">电话</string>
    <string name="IndentTime">下单时间</string>
    <string name="IndentNum">订单号</string>
    <string name="Refund">退款中</string>
    <string name="ContinuePay">继续支付</string>
    <string name="IndentCost">订单费用</string>
    <string name="Poundage">手续费</string>
    <string name="RefundAmount">退款金额</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="yiyouzhanghao">已有账号，立即登陆</string>
    <string name="inputAuthCode">输入验证码</string>
    <string name="nologincounter">没账号,立即注册</string>
    <string name="forgetpass">忘记密码</string>
    <string name="EndOfCity">结束城市</string>
    <string name="disanfang">第三方登陆</string>
    <string name="EndDestinationCity">结束城市目的地</string>
    <string name="passwordmodefy">修改密码</string>
    <string name="surepassword">确认密码</string>
    <string name="inputpassword2">重新输入密码</string>
    <string name="PaymentAgreement">已阅读并同意《海龟出行服务及购票使用协议》</string>
    <string name="flightmessage">航班信息</string>
    <string name="flightmessage1">输入航班信息,如HU5233</string>
    <string name="flightmessage2">选择目的地</string>
    <string name="Chooseflighttime">选择起飞时间</string>
    <string name="ChooseTime">选择当地起飞时间</string>
    <string name="journeyresrve">行程预定</string>
    <string name="start">你从哪里出发</string>
    <string name="InputYourDescr">输入您的备注说明</string>
    <string name="hotpoint">热门地标</string>
    <string name="type">类型</string>
    <string name="passenger">换乘车人</string>
    <string name="AddressBook">通讯录</string>
    <string name="EnterContact">输入乘客姓名</string>
    <string name="EnterPassengersPhone">输入乘客电话</string>
    <string name="DriverContactPassengers">司机会直接联系乘车人，请提前通知乘车人准备出行</string>
    <string name="HistoricalRecord">历史记录</string>
    <string name="confirm">确认</string>
    <string name="itinerary">行程单</string>
    <string name="editor">编辑</string>
    <string name="addItinerary">添加美食/酒店/景点等</string>
    <string name="CheckRoute">查看路线</string>
    <string name="HongKongNote">注：为了不音响行程，L签的乘客需要上传资料，我们公司免费代办L团签，不收取温和费用。其他签证不需要上传。</string>
    <string name="HongKongNote2">没有团签的乘客必须上传通行证，我们公司免费帮签，不加任何费用，须提前1天办好送关手续。</string>
    <string name="HongKongNote3">请务必确认签证有效期，若因签证问题二被延误过关需加收等候费用。</string>
    <string name="UploadData">上传资料</string>
    <string name="PerfectInformation">完善资料</string>
    <string name="visa">签证</string>
    <string name="ContinueAdd">继续添加</string>
</resources>
