<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:userAPP="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20px">

        <TextView
            android:layout_marginBottom="20px"
            android:layout_marginTop="20px"
            android:textSize="46px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black1"
            android:text="@string/InvoiceDetails"/>

        <com.jh.rental.user.view.widget.InputBoxItemView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            userAPP:tvTex="@string/company"
            userAPP:etTex="@string/company"/>
        <com.jh.rental.user.view.widget.InputBoxItemView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            userAPP:tvTex="@string/InvoiceContent" />
        <com.jh.rental.user.view.widget.InputBoxItemView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            userAPP:tvTex="@string/InvoiceContent"/>
        <com.jh.rental.user.view.widget.InputBoxItemView
            android:id="@+id/inputBox4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            userAPP:tvTex="@string/MoreInformation"
            userAPP:etTex="@string/information" />

        <TextView
            android:layout_marginBottom="20px"
            android:layout_marginTop="20px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="46px"
            android:textColor="@color/black1"
            android:text="@string/ConsigneeInformation"/>
        <com.jh.rental.user.view.widget.InputBoxItemView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            userAPP:tvTex="@string/ElectronicEmail"
            userAPP:etTex="@string/email"/>

        <Button
            android:layout_marginTop="20px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#CCCCCC"
            android:textColor="#FFF"
            android:textSize="66px"
            android:text="@string/commit"/>

</LinearLayout>