<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:userAPP="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

        <LinearLayout
            android:background="#fff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
                <com.jh.rental.user.view.widget.SelectBoxItemView
                    android:layout_width="match_parent"
                    android:layout_height="201px"
                    android:id="@+id/charterdbus_edt1"
                    userAPP:tvTex="@string/DepartureCity"
                    userAPP:etTex="@string/WantToGoToWhere"/>
                <com.jh.rental.user.view.widget.SelectBoxItemView
                    android:layout_width="match_parent"
                    android:layout_height="201px"
                    android:id="@+id/charterdbus_edt2"
                    userAPP:tvTex="@string/EndOfCity"
                    userAPP:etTex="@string/EndDestinationCity"/>
                <com.jh.rental.user.view.widget.SelectBoxItemView
                    android:layout_width="match_parent"
                    android:layout_height="201px"
                    android:id="@+id/charterdbus_date"
                    userAPP:tvTex="@string/CharterDate"
                    userAPP:etTex="@string/ChooseCharterDate"/>
                <com.jh.rental.user.view.widget.SelectBoxItemView
                    android:layout_width="match_parent"
                    android:layout_height="201px"
                    android:id="@+id/charterdbus_counters"
                    userAPP:tvTex="@string/travelPeoplePum"
                    userAPP:etTex="@string/SelectPeoplePum"/>
                <com.jh.rental.user.view.widget.SelectBoxItemView
                    android:layout_width="match_parent"
                    android:layout_height="201px"
                    android:id="@+id/charterdbus_type"
                    userAPP:tvTex="@string/SelectModels"
                    userAPP:etTex="@string/SelectModels"/>
        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_margin="40px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_blue"
            android:textColor="#FFF"
            android:textSize="48px"
            android:text="@string/TripReservation"/>
        <RelativeLayout
            android:id="@+id/rl_img"
            android:layout_marginLeft="40px"
            android:layout_marginRight="40px"
            android:layout_width="match_parent"
            android:layout_height="400px">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/catxxhdpi"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/CustomTravelGuide"
                    android:textColor="#fff"
                    android:textSize="46px"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />
        </RelativeLayout>
                </LinearLayout>
        </ScrollView>
</LinearLayout>