<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/sub_item_titel"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/mudiwhite4"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView6"
            android:layout_width="70dp"
            android:layout_marginRight="15dp"
            android:layout_height="match_parent"
            android:gravity="end|center_vertical"
            android:text="@string/PersonPhone" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/inputphone"
            android:background="@null"
            android:textColor="#424242"
            android:drawableBottom="@drawable/linecolor1"
            android:textColorHint="@color/mudiwhite4"
            android:inputType="number"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/mudiwhite4"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="70dp"
            android:layout_marginRight="15dp"
            android:layout_height="match_parent"
            android:gravity="end|center_vertical"
            android:text="@string/AuthCode" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:hint="@string/inputAuthCode"
            android:background="@null"
            android:textColor="#424242"
            android:drawableBottom="@drawable/linecolor1"
            android:textColorHint="@color/mudiwhite4"
            android:inputType="number"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/mudiwhite4"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/GetAuthCode"
            android:textColor="#4CB2FF"
            android:layout_marginRight="45px"
            android:layout_gravity="end|center_vertical"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/mudiwhite4"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_marginRight="15dp"
            android:gravity="end|center_vertical"
            android:text="@string/password" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/inputpassword"
            android:background="@null"
            android:textColor="#424242"
            android:drawableBottom="@drawable/linecolor1"
            android:textColorHint="@color/mudiwhite4"
            android:inputType="textPassword"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/mudiwhite4"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="70dp"
            android:layout_marginRight="15dp"
            android:layout_height="match_parent"
            android:gravity="end|center_vertical"
            android:text="@string/surepassword" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/inputpassword2"
            android:background="@null"
            android:textColor="#424242"
            android:drawableBottom="@drawable/linecolor1"
            android:textColorHint="@color/mudiwhite4"
            android:inputType="textPassword"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/mudiwhite4"/>

    <Button
        android:id="@+id/login_login"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:background="#50b4fd"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:text="@string/commit" />
</LinearLayout>