<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/showcardmessage"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="80dp"
          android:background="@android:drawable/alert_light_frame"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
 <Button
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/cancel"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sure"/>
    </LinearLayout>
</LinearLayout>