<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="#FFF"
    android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:background="#4CB2FF"
    android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:id="@+id/pop_cancel"
        android:layout_marginLeft="10dp"
        android:text="@string/cancel"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="@string/Chooseflighttime"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_weight="1"
        android:id="@+id/pop_sure"
        android:layout_marginRight="10dp"
        android:gravity="end"
        android:text="@string/sure"/>
</LinearLayout>
    <CalendarView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pop_singlecanlender">
    </CalendarView>
</LinearLayout>