<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20px"
    android:layout_marginRight="20px">

    <include layout="@layout/sub_item_titel"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/ChangePassword" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/fanhuixxhdpi"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/ClearCache" />
        <TextView
            android:layout_toLeftOf="@+id/iv_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/ClearCache" />
        <ImageView
            android:id="@+id/iv_img"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/fanhuixxhdpi"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/AboutUs" />
        <TextView
            android:layout_toLeftOf="@+id/iv_img2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/version" />
        <ImageView
            android:id="@+id/iv_img2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/fanhuixxhdpi"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#9a9a9a"
        android:textColor="#FFF"
        android:textSize="66px"
        android:text="@string/commit"/>
</LinearLayout>